cns/html/cns.css
/* ... */
.room-heading {
  background: lavender;
  font-weight: bold;
}

/* Other room names, not in the heading that describes the current room. */
:not(.room-heading) > .room-name {
  background: lavenderblush;
  font-weight: bold;
}

.direction-name {
  background: lavenderblush;
  font-weight: bold;
}

.hint {
  background: linen;
  font-style: italic;
}

.ending-card {
  /* Offsets the block from the page. */
  background: mediumspringgreen;
  border: 2px ridge grey;

  /* Makes the border stay back from the edge of the text, which is nice. */
  padding: 0.5em;

  /* Vorpal is creating a span for this, but to have the border and background
   * work the way we want, we style it as a block or inline-block.
   * Even worse, there is some bug in which trying to center the content in
   * Inform causes the generated HTML to be all screwy, with the ending-card
   * empty and the text outside it.  Ugh.
   * So, to solve all that, we use block to take up the whole line, inline-size
   * to shrink the background to the content, and margin to center it all. */
  display: block;
  inline-size: fit-content;
  margin: 0 auto;
}

#help-card p:not(.title),
#main-settings-card p:not(.title) {
  /* Space apart these menu buttons */
  margin: 2rem 1rem;
}

/* This will be used to highlight interesting words in room descriptions in
 * easy mode. */
body[data-difficulty="easy"] .interesting-highlight,
#game-settings-card .interesting-highlight {
  background: paleturquoise;
}

.hidden {
  display: none !important;
}

.floating-button {
  border-radius: 50%;
  font-weight: bold;
  padding: 0;
}

.floating-button img {
  height: 2em;
  vertical-align: middle;
}

.floating-button-text {
  padding: 0.5em;

  border-radius: 0.2em;
  font-weight: bold;
}

.floating-button-text.inline {
  padding-top: 0;
  padding-bottom: 0;
}

.floating-button,
.floating-button-text {
  /* This may matter across browsers.  In Chrome, the default is fine. */
  border: 2px solid black;

  background: powderblue;
  cursor: pointer;
}

.floating-button:hover,
.floating-button-text:hover {
  background: turquoise;
}

.floating-button:active,
.floating-button-text:active {
  background: aqua;
}

.popup-container {
  /* Position in the middle of the page, overlaying everything else. */
  position: fixed;
  width: 100vw;
  height: 100vh;
  height: 100dvh;
  margin: 0;
  padding: 0;
  overflow: hidden;
  top: 0;
  left: 0;

  display: flex;
  align-items: center;
  justify-content: center;

  /* Place a scrim behind the card */
  background: radial-gradient(black, transparent);
}

.popup {
  /* Offsets the block from the page. */
  border: 2px ridge grey;

  /* Makes the border stay back from the edge of the text, which is nice. */
  padding: 0.5em;

  /* Limit the size of the card. */
  min-width: calc(min(100vw - 6em, 30em));
  max-width: calc(min(100vw - 6em, 60em));
  max-height: calc(100vh - 4em);
  max-height: calc(100dvh - 4em);
  margin: 2em 3em;
  padding: 2em;

  /* Scroll if needed, otherwise, no scroll bar. */
  overflow-y: auto;

  /* Set background. */
  background: aliceblue;

  /* Allow positioning elements within the popup. */
  position: relative;
}

.popup hr {
  margin: 2em 0;
}

.popup {
  font-size: 3vh;
}

.popup * {
  font-size: inherit;
}

.popup p.title {
  font-size: 6vh;
}

.floating-button {
  font-size: 2vh;
  width: 6vh;
  height: 6vh;
}

.popup .floating-button {
  font-size: 4vh;
}

/* For tall mobile devices, shrink the font a little relative to the height. */
@media (orientation: portrait) {
  .popup {
    font-size: 2vh;
  }

  .popup p.title {
    font-size: 4vh;
  }

  .floating-button {
    font-size: 1.5vh;
    width: 5vh;
    height: 5vh;
  }

  .popup .floating-button {
    font-size: 3vh;
  }
}


.popup p,
.popup div.p {
  /* Keep the paragraph margins the same on all sides. */
  margin: 2vh;
}

.popup p.title {
  font-weight: bold;
}

/* This should stay in the corner as the popup scrolls. */
.popup-close.floating-button {
  float: right;
  /* With sticky position, this still takes up space in the layout and respects
   * the parent's padding.  So place it at top:0, right:0. */
  position: sticky;
  top: 0;
  right: 0;
}

#map-card .popup-close.floating-button {
  /* With the map, we don't want this to take up space in the layout.  So we
   * use position:absolute, but this means we now have to set coordinates that
   * space it away from the corner a little, as opposed to 0,0 in the defaults
   * just above. */
  position: absolute;
  top: 3vh;
  right: 3vh;
}

#help-button,
#settings-button,
#transcript-button {
  position: fixed;
  right: 2em;
}

/* For mobile devices, move the floating buttons over a little more. */
body[data-mobile="true"] #help-button,
body[data-mobile="true"] #settings-button,
body[data-mobile="true"] #transcript-button {
  right: 1em;
}

#help-button {
  top: 1em;
}

#settings-button {
  top: 5em;
}

#transcript-button {
  top: 9em;
}

#how-do-i-play-card p, #how-do-i-play-card li {
  /* Space out the help to make it easier to read. */
  word-spacing: 0.15em;
  line-height: 1.5;
}
#how-do-i-play-card li {
  margin-left: 1em;
}

#how-do-i-play-card li.top {
  margin-top: 1em;
}

#how-do-i-play-card tt {
  background: seashell;
  border: 1px inset lightgray;
  padding: 0 0.3em;
}

#map-card {
  /* The map should occupy all the space available.
   * Since the map is taller than wide, only pin the height. */
  height: 100%;
  min-width: 0;
  overflow: hidden;
}
#map-card img {
  height: 100%;
}

.popup label,
#lineinput label {
  /* Override the haven default for labels */
  background: none;
  color: inherit;
}

/* NOTE: don't add div here, or else desktop-bundle-only breaks */
.popup label,
.popup input {
  display: block;
}

.popup div,
.popup label,
.popup input {
  /* Space these apart a bit */
  margin: 1em 0;
}

.popup label.inline {
  margin: 0;
}
/* ... */

